# dgp-slim

./: Makefile  pyproject.toml
dgp/: __init__.py  constants.py
dgp/agents/: __init__.py  agent_2d.py  agent_3d.py  base_agent.py
dgp/annotations/: __init__.py  base_annotation.py  bounding_box_2d_annotation.py  bounding_box_3d_annotation.py  depth_annotation.py  key_line_2d_annotation.py  key_line_3d_annotation.py  key_point_2d_annotation.py  key_point_3d_annotation.py  ontology.py  panoptic_segmentation_2d_annotation.py  semantic_segmentation_2d_annotation.py  transform_utils.py  transforms.py  visibility_filter_transform.py
dgp/contribs/dgp2wicker/: setup.py
dgp/contribs/dgp2wicker/dgp2wicker/: __init__.py  cli.py  dataset.py  ingest.py  serializers.py
dgp/contribs/dgp2wicker/tests/: test.py
dgp/contribs/pd/: metadata_pb2.py
dgp/features/: __init__.py  feature_ontology.py
dgp/proto/: agent_pb2.py  agent_pb2.pyi  annotations_pb2.py  annotations_pb2.pyi  artifacts_pb2.py  artifacts_pb2.pyi  dataset_pb2.py  dataset_pb2.pyi  features_pb2.py  features_pb2.pyi  file_datum_pb2.py  file_datum_pb2.pyi  geometry_pb2.py  geometry_pb2.pyi  identifiers_pb2.py  identifiers_pb2.pyi  image_pb2.py  image_pb2.pyi  map_pb2.py  map_pb2.pyi  ontology_pb2.py  ontology_pb2.pyi  point_cloud_pb2.py  point_cloud_pb2.pyi  radar_point_cloud_pb2.py  radar_point_cloud_pb2.pyi  remote_pb2.py  remote_pb2.pyi  sample_pb2.py  sample_pb2.pyi  scene_pb2.py  scene_pb2.pyi  statistics_pb2.py  statistics_pb2.pyi
dgp/utils/: accumulate.py  dataset_conversion.py  datasets.py  pose.py  protobuf.py  statistics.py
dgp/utils/structures/: bounding_box_2d.py  bounding_box_3d.py  instance_mask.py  key_line_2d.py  key_line_3d.py  key_point_2d.py  key_point_3d.py
docs/source/: conf.py
